# codhes-2026

./: .ignore  CODHES 2026 Paper Template.docx  LATEX_CHEATSHEET.md  README.md  RESEARCH_PLAN_PROGRESS.md  RESEARCH_REPORT.md  codhes2026_paper.aux  codhes2026_paper.bbl  codhes2026_paper.blg  codhes2026_paper.fdb_latexmk  codhes2026_paper.fls  codhes2026_paper.out  codhes2026_paper.tex  codhes2026_template.aux  codhes2026_template.bbl  codhes2026_template.blg  codhes2026_template.fdb_latexmk  codhes2026_template.fls  codhes2026_template.out  codhes2026_template.tex  proposal_paper_codhes_python_automation.html  references.bib
.github/workflows/: readability-python-demo-ci.yml  readibility-demo-ci.yml  readibility-demo-deploy.yml
.serena/: project.yml
readability-python-demo/: .gitignore  AGENTS.md  README.md  generate_charts.py  pyproject.toml  statistical_analysis.py  urls.txt
readability-python-demo/results/: report.md
readability-python-demo/results/analysis/: results_section_outline.md  statistical_analysis_report.md
readability-python-demo/src/readability_auditor/: __init__.py  __main__.py  cli.py  context7_client.py  exporter.py  llm_detector.py  llm_evaluator.py  llm_prompts.py  logger.py  metrics.py  models.py  scraper.py  text_cleaner.py  text_loader.py
readability-python-demo/tests/: __init__.py  test_exporter.py  test_llm_evaluator.py  test_llm_prompts.py  test_metrics.py  test_text_cleaner.py  test_text_loader.py
readibility-demo/: .gitignore  AGENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
readibility-demo/public/: manifest.json
readibility-demo/src/: index.test.tsx  index.tsx  renderer.tsx
submission_package/: README.md  codhes2026_paper.tex
(+17 files in other folders)
